--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.dss.speedtest"
+        applicationId "com.athena.speedtest"
         minSdkVersion 24
         targetSdkVersion 31
         versionCode 1
@@ -61,4 +61,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation project(path: ':speedtest')
+//    implementation 'com.github.vipdss2023:speedtest:1.0.1'
 }
